# runtipi-companion

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  runtipi-companion.example.yaml
.github/workflows/: ci.yml  release.yml
deploy/ansible/: README.md  install.yml  inventory.example.yml
src/runtipi_companion/: __init__.py  backup.py  cli.py  config.py  config_wizard.py  doctor.py  notify.py  rclone.py  restore.py  retention.py  security.py  setup_wizard.py  tailscale.py  templates.py  tui.py  update.py  version_check.py
src/runtipi_companion/backup/: __init__.py  rclone.py  restore.py  retention.py  runner.py
src/runtipi_companion/config/: __init__.py  loader.py  migrations.py  schema.py  templates.py
src/runtipi_companion/data/systemd/: runtipi-companion-backup-weekly.timer  runtipi-companion-backup-yearly.timer  runtipi-companion-backup@.service
src/runtipi_companion/security/: __init__.py  hardening.py  tailscale.py
src/runtipi_companion/setup/: __init__.py  rclone.py  services.py  wizard.py
src/runtipi_companion/system/: __init__.py  notify.py  runtipi_cli.py  shell.py  version_check.py
src/runtipi_companion/ui/: __init__.py  config_wizard.py  form_wizard.py  tui.py  validators.py
systemd/: README.md  runtipi-companion-backup-daily.timer  runtipi-companion-backup-monthly.timer
tests/: test_backup_verify.py  test_config.py  test_config_wizard.py  test_doctor.py  test_form_wizard.py  test_migrations.py  test_notify.py  test_retention.py  test_security.py  test_setup_services.py  test_shell.py  test_tui.py  test_version_check.py
tests/e2e/: Dockerfile  e2e.sh
