[project]
name = "runtipi-companion"
dynamic = ["version"]
description = "A companion CLI for Runtipi: multi-remote rclone backups with per-remote retention, restores, app/core updates, VPS security hardening, and Tailscale setup."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Phil" }]
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
runtipi-companion = "runtipi_companion.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/runtipi_companion"]
