[project]
name = "runtipi-companion"
dynamic = ["version"]
description = "A companion CLI for Runtipi: multi-remote rclone backups with per-remote retention, restores, app/core updates, VPS security hardening, and Tailscale setup."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Phil" }]
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "apprise>=1.8.0",
]

[project.scripts]
runtipi-companion = "runtipi_companion.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.6.0", "pre-commit>=3.5.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# PyPI/TestPyPI reject local version segments (the "+g<hash>" suffix) --
# drop them so untagged builds (main-branch TestPyPI publishes) still get an
# uploadable version like "1.0.1.dev1" instead of "1.0.1.dev1+g0cc0f4a45".
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/runtipi_companion"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Defaults (pyflakes + pycodestyle errors) plus import sorting, pyupgrade,
# and bugbear.
extend-select = ["I", "UP", "B"]
# Keep typing.Optional: we support Python 3.9, and typer evaluates
# annotations at runtime, where "X | None" doesn't exist before 3.10.
ignore = ["UP007"]
